tests/build/fail/widget/new_fns_cannot_be_unsafe.stderr
error: `new_child` cannot be `unsafe`
  --> $DIR/new_fns_cannot_be_unsafe.rs:10:5
   |
10 |     unsafe fn new_child() -> NilUiNode {
   |     ^^^^^^

error: `new` cannot be `unsafe`
 --> $DIR/new_fns_cannot_be_unsafe.rs:7:5
  |
7 |     unsafe fn new(child: impl UiNode, id: WidgetId) -> impl UiNode {
  |     ^^^^^^
